syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "RegistraChavePixGrpc";
option objc_class_prefix = "HLW";

import "google/protobuf/empty.proto";

package com.github.zlbovolini.keymanager.grpc;

service RegistraChavePixService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service RemoveChavePixService {
  rpc remove (RemoveChavePixRequest) returns (google.protobuf.Empty) {}
}

service ConsultaChavePixService {
  rpc consulta(ConsultaPorIdOuChaveRequest) returns (DadosChavePixResponse) {}
}

service ListaChavePixService {
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

message RegistraChavePixRequest {
  string clienteId           = 1;
  TipoChaveMessage tipoChave = 2;
  string chave               = 3;
  TipoContaMessage tipoConta = 4;
}

enum TipoChaveMessage {
  CHAVE_DESCONHECIDA = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

enum TipoContaMessage {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

message RegistraChavePixResponse {
  string pixId = 1;
}

message RemoveChavePixRequest {
  string chaveId   = 1;
  string clienteId = 2;
}

message ConsultaPorIdOuChaveRequest {
  message PorId {
    string pixId = 1;
    string clienteId = 2;
  }

  oneof filtro {
    PorId porId  = 1;
    string chave = 2;
  }
}

message DadosChavePixResponse {
  string chaveId           = 1;
  string clienteId         = 2;
  string tipoChave         = 3;
  string chave             = 4;
  TitularResponse titular  = 5;
  DadosContaResponse conta = 6;
}

message TitularResponse {
  string nome = 1;
  string cpf  = 2;
}

message DadosContaResponse {
  string instituicao = 1;
  string agencia     = 2;
  string numero      = 3;
  string tipoConta   = 4;
}

message ListaChavesPixRequest {
  string clienteId = 1;
}

message ListaChavesPixResponse {
  message ChavePixResponse {
    string pixId        = 1;
    string clienteId    = 2;
    TipoChaveMessage tipoChave = 3;
    string chave        = 4;
    TipoContaMessage tipoConta = 5;
    string criadoEm =     6;
  }

  repeated ChavePixResponse chaves = 1;
}